# memento-mcp

./: .gitignore  CLAUDE.md  MCP_SERVER_SETUP.md  README.md  pyproject.toml  requirements.txt  test_brief.py  test_e2e.py  test_google_provider.py  test_omnirag.py
docs/: MEMORY_ENZYMES_DETAILED.md  RESEARCHER_AGENT_DETAILED.md
src/a_mem/: config.py  main.py
src/a_mem/core/: logic.py
src/a_mem/omnirag/: __init__.py  conversation_service.py  cosmos_config.py  jena_migration.py  rag_data_service.py  strategy_builder.py
src/a_mem/storage/: engine.py
src/a_mem/utils/: enzymes.py  llm.py  priority.py  researcher.py  researcher_tools.py
tests/: test_omnirag.py
tools/: VISUALIZER_README.md  amem_stats.py  benchmark_enzymes.py  extract_graph.py  visualize_memory.py
